--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.16.2",
+    "bcrypt": "^6.0.0",
     "express": "^5.1.0",
     "prisma": "^6.16.2",
     "twig": "^1.17.1"
