--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@prisma/client": "^6.16.2",
     "bcrypt": "^6.0.0",
+    "chart.js": "^4.5.0",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "twig": "^1.17.1"
