--- a/package.json
+++ b/package.json
@@ -14,11 +14,22 @@
     "@prisma/client": "^6.16.2",
     "bcrypt": "^6.0.0",
     "chart.js": "^4.5.0",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
+    "nodemailer": "^7.0.6",
     "twig": "^1.17.1"
   },
   "prisma": {
     "schema": "./prisma"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Jert13830/TrekIT.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/Jert13830/TrekIT/issues"
+  },
+  "homepage": "https://github.com/Jert13830/TrekIT#readme"
 }
